<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageButton
        android:id="@+id/btn_run"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/bg_round_accent"
        android:contentDescription="@string/cd_run_pause"
        android:src="@drawable/ic_pause" />

    <LinearLayout
        android:id="@+id/seg_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/bg_segment"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mode_spectrum"
            style="@style/SegmentItem"
            android:text="@string/mode_spectrum" />

        <TextView
            android:id="@+id/mode_split"
            style="@style/SegmentItem"
            android:text="@string/mode_split" />

        <TextView
            android:id="@+id/mode_waterfall"
            style="@style/SegmentItem"
            android:text="@string/mode_waterfall" />
    </LinearLayout>
</merge>
